force-app/main/default/objects/Blood_Donor__c/Blood_Donor__c.object-meta.xml
<CustomObject>
    <description>List of people interested in donating blood</description>
    <label>Blood Donor</label>
    <nameField>
        <displayFormat>BD-{000}</displayFormat>
        <label>Donor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Donors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>