force-app/main/default/objects/Blood_Donor__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR( TODAY()) -  YEAR( DOB__c ) - 

 IF(
    DATE(year(TODAY()), month( DOB__c) ,day(DOB__c )) &gt; TODAY(),
    1,
    0
   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>