force-app/main/default/objects/Blood_Donor__c/fields/Days_remaining_to_donate__c.field-meta.xml
<CustomField>
    <fullName>Days_remaining_to_donate__c</fullName>
    <formula>IF (
Since_blood_donated_days__c &lt; 90,
90 - Since_blood_donated_days__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days remaining to donate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>