force-app/main/default/objects/Blood_Donor__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>State&apos;s district values</description>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Chengalpet</fullName>
            </value>
            <value>
                <fullName>Kanchipuram</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Trichy</fullName>
            </value>
            <value>
                <fullName>Chitoor</fullName>
            </value>
            <value>
                <fullName>Guntoor</fullName>
            </value>
            <value>
                <fullName>Kakinada</fullName>
            </value>
            <value>
                <fullName>Krishna</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Visakapatinam</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Kammam</fullName>
            </value>
            <value>
                <fullName>Narayanapet</fullName>
            </value>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
            <value>
                <fullName>Kasaragod</fullName>
            </value>
            <value>
                <fullName>Kannur</fullName>
            </value>
            <value>
                <fullName>Wayanad</fullName>
            </value>
            <value>
                <fullName>Kozhikode</fullName>
            </value>
            <value>
                <fullName>Thrissur</fullName>
            </value>
            <value>
                <fullName>Ernakulam</fullName>
            </value>
            <value>
                <fullName>Idukki</fullName>
            </value>
            <value>
                <fullName>Kottayam</fullName>
            </value>
            <value>
                <fullName>Alappuzha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>