force-app/main/default/objects/Blood_Donor__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Donor&apos;s Date of Birth</description>
    <label>DOB</label>
    <type>Date</type>
</CustomField>