force-app/main/default/objects/Blood_Donor__c/fields/Eligible_for_blood_donation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_blood_donation__c</fullName>
    <formula>IF(

 Age__c &gt; 18 &amp;&amp;  Weight__c &gt; 50 &amp;&amp;  Since_blood_donated_days__c &gt; 90,
TRUE, 
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for blood donation</label>
    <type>Checkbox</type>
</CustomField>