force-app/main/default/objects/Blood_Donor__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <description>Donor&apos;s email address</description>
    <label>Email ID</label>
    <type>Email</type>
</CustomField>