force-app/main/default/objects/Blood_Donor__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the blood donor</description>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>