force-app/main/default/objects/Blood_Donor__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <description>Donor&apos;s Contact number</description>
    <label>Phone No</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>