force-app/main/default/objects/Blood_Donor__c/fields/Phone_numbers_only__c.field-meta.xml
<CustomField>
    <fullName>Phone_numbers_only__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
Phone_No__c ,&quot; &quot;, &quot;&quot;),
&quot;-&quot;, &quot;&quot;),
&quot;+&quot;, &quot;&quot;),
&quot;(&quot;, &quot;&quot;),
&quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone numbers only</label>
    <type>Text</type>
</CustomField>