force-app/main/default/objects/Blood_Donor__c/fields/Since_blood_donated_days__c.field-meta.xml
<CustomField>
    <fullName>Since_blood_donated_days__c</fullName>
    <formula>TODAY() - Last_Donated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Since blood donated days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>