force-app/main/default/objects/Blood_Donor__c/fields/Total_blood_Coordinations__c.field-meta.xml
<CustomField>
    <fullName>Total_blood_Coordinations__c</fullName>
    <description>Total no of blood coordinations for each donor</description>
    <label>Total blood Coordinations</label>
    <summaryForeignKey>Blood_Coordination__c.Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>