force-app/main/default/objects/Blood_Donor__c/validationRules/Age_eligibility.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_eligibility</fullName>
    <active>true</active>
    <description>Check donor&apos;s age</description>
    <errorConditionFormula>OR 
(
 Age__c &lt;= 18,
 Weight__c &lt;= 50
)</errorConditionFormula>
    <errorMessage>Ensure Age is greater than 18 and Weight is greater than 50</errorMessage>
</ValidationRule>