force-app/main/default/objects/Blood_Donor__c/validationRules/Phone_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_validation</fullName>
    <active>true</active>
    <description>Should contain only numbers</description>
    <errorConditionFormula>OR(
NOT( ISNUMBER( Phone_No__c )),
 LEN( Phone_No__c )  &lt;&gt; 10
)


/*NOT( REGEX(
 SUBSTITUTE(
 SUBSTITUTE(
 SUBSTITUTE(
 SUBSTITUTE(
 SUBSTITUTE( 
Phone_No__c ,&quot; &quot;, &quot;&quot;),
&quot;-&quot;, &quot;&quot;),
&quot;+&quot;, &quot;&quot;),
&quot;(&quot;, &quot;&quot;),
&quot;)&quot;, &quot;&quot;),

&quot;^[0-9] {10}$&quot;))*/</errorConditionFormula>
    <errorDisplayField>Phone_No__c</errorDisplayField>
    <errorMessage>Phone number must contain only 10 digits and no characters</errorMessage>
</ValidationRule>