force-app/main/default/objects/Blood_Donor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Phone_No__c</columns>
    <columns>Blood_Group__c</columns>
    <columns>DOB__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>